src/objects/Donor_Level__c.object
<CustomObject>
    <description>Tracks the definition of donor levels, for both lifetime or period based amounts.  Also provides a place for the organization to track all associated plans, benefits, goals, etc. for each donor level.</description>
    <fields>
        <fullName>Account_Summary_Field__c</fullName>
        <description>The donation rollup summary field on Account that defines the amount and timeframe to base this Donor Level on.</description>
        <inlineHelpText>The donation rollup summary field on Account that defines the amount and timeframe to base this Donor Level on.</inlineHelpText>
        <label>Account Summary Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this Donor Level is currently in use.</description>
        <inlineHelpText>Whether this Donor Level is currently in use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefits_Description__c</fullName>
        <description>Describes the benefits a Donor receives when attaining this Donor Level.</description>
        <inlineHelpText>Describes the benefits a Donor receives when attaining this Donor Level.</inlineHelpText>
        <label>Benefits Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If specified, the Donor Level will be based on all donations from the donor&apos;s account to this campaign.</description>
        <inlineHelpText>If specified, the Donor Level will be based on all donations from the donor&apos;s account to this campaign.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Donor Levels</relationshipLabel>
        <relationshipName>Donor_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Number_of_Gifts__c</fullName>
        <description>The goal for how many gifts to have at this Donor Level</description>
        <inlineHelpText>The goal for how many gifts to have at this Donor Level</inlineHelpText>
        <label>Goal: Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Total_Amount__c</fullName>
        <description>The goal for how much money to raise at this Donor Level</description>
        <inlineHelpText>The goal for how much money to raise at this Donor Level</inlineHelpText>
        <label>Goal: Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <description>Tracks the marketing message for what donations at this level will help the organization accomplish</description>
        <inlineHelpText>Tracks the marketing message for what donations at this level will help the organization accomplish</inlineHelpText>
        <label>Impact Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lifetime_Donor_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this Donor Level should be tracked on the Account&apos;s Lifetime Donor Level instead of the Account&apos;s Current Donor Level</description>
        <inlineHelpText>Whether this Donor Level should be tracked on the Account&apos;s Lifetime Donor Level instead of the Account&apos;s Current Donor Level</inlineHelpText>
        <label>Lifetime Donor Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Amount__c</fullName>
        <description>The maximum amount (money or number of gifts) to be eligible for this Donor Level.</description>
        <inlineHelpText>The maximum amount (money or number of gifts) to be eligible for this Donor Level.</inlineHelpText>
        <label>Maximum Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Amount__c</fullName>
        <description>The minimum amount (money or number of gifts) to be eligible for this Donor Level.</description>
        <inlineHelpText>The minimum amount (money or number of gifts) to be eligible for this Donor Level.</inlineHelpText>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Action_Plan_Template__c</fullName>
        <description>The Action Plan Template to apply to Accounts that become prospect for this Donor Level</description>
        <inlineHelpText>The Action Plan Template to apply to Accounts that become prospect for this Donor Level</inlineHelpText>
        <label>Prospect Action Plan Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stewardship_Action_Plan_Template__c</fullName>
        <description>The Action Plan Template to apply to Accounts that reach this Donor Level</description>
        <inlineHelpText>The Action Plan Template to apply to Accounts that reach this Donor Level</inlineHelpText>
        <label>Stewardship Action Plan Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Donor Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lifetime_Donor_Level__c</columns>
        <columns>Minimum_Amount__c</columns>
        <columns>Maximum_Amount__c</columns>
        <columns>Goal_Number_of_Gifts__c</columns>
        <columns>Goal_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Donor Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donor Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>